# sergut

./: .gitignore  CMakeLists.txt  LICENSE  README  Todo.txt  local.pri_example  sergut.pro
benchmark/: benchmark.pro  main.cpp
doc/: sergut.dox
lib/: VersionTracker.cpp  VersionTracker.h  lib.pro
lib/misc/: ConstStringRef.h  StringRef.h
lib/sergut/: DeserializerBase.h  Exception.h  JavaClassGenerator.h  JsonDeserializer.cpp  JsonDeserializer.h  JsonDeserializerBase.h  JsonDeserializerQt.cpp  JsonDeserializerQt.h  JsonSerializer.cpp  JsonSerializer.h  JsonSerializerBase.cpp  JsonSerializerBase.h  JsonSerializerQt.h  MemberDeserializer.cpp  MemberDeserializer.h  Misc.h  ParsingException.cpp  ParsingException.h  SerializationException.h  SerializerBase.h  TypeTraits.h  UrlDeserializer.cpp  UrlDeserializer.h  UrlNameCombiner.h  UrlSerializeToVector.cpp  UrlSerializeToVector.h  UrlSerializer.cpp  UrlSerializer.h  Util.h  ValueType.h  Version.cpp  Version.h  XmlDeserializer.cpp  XmlDeserializer.h  XmlDeserializerTiny.cpp  XmlDeserializerTiny.h  XmlDeserializerTiny2.cpp  XmlDeserializerTiny2.h  XmlSerializer.cpp  XmlSerializer.h  (+3 more)
lib/sergut/detail/: DummySerializer.h  JavaClassGeneratorBase.cpp  JavaClassGeneratorBase.h  JavaClassGeneratorBuilder.h  (+11 more)
lib/unicode/: ParseResult.h  Utf16Codec.h  Utf32Char.h  Utf8Codec.cpp  Utf8Codec.h
lib/xml/: ParseTokenType.h  PullParser.cpp  PullParser.h
support/: sergut-1.1.0-gdb-script.py
test/: TestVersionTracker.cpp  main.cpp  test.pro
test/hypercall/: hypercall.cpp
test/sergut/: TestJavaClassGenerator.cpp  TestSergut.cpp  TestSergutJson.cpp  TestSergutJsonPolymorphic.cpp  TestSergutUrl.cpp  TestSergutXml.cpp  TestSupportClasses.h  TestXsdGenerator.cpp  XmlDeSerializerTiny.cpp
test/unicode/: TestUtf16Codec.cpp  TestUtf8Codec.cpp
test/xml/: TestPullParser.cpp  TestTextDecodingHelper.cpp
(+54 files in other folders)
